--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@
 #nonedit {
   pointer-events: none;
   width: 330px;
-  height: 100px;
+  height: 40px;
   margin-bottom: 10px;
   margin-top: 10px;
+
+  padding-top: 10px;
+  text-align: right;
+  font-size: 30px;
 }
 
 #container {
