--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #nonedit {
   pointer-events: none;
   width: 330px;
@@ -18,7 +24,7 @@
 
 #container {
   width: 350px;
-  height: 450px;
+  height: 400px;
   border: 2px solid black;
   text-align: center;
 }
@@ -33,10 +39,6 @@
   display: flex;
   align-content: flex-start;
   flex-wrap: wrap-reverse;
-}
-
-.numbersminwidth {
-  min-width: 90px;
 }
 
 #operators {
