--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #404e4d;
 }
 
 #nonedit {
@@ -25,7 +26,8 @@ body {
 #container {
   width: 350px;
   height: 400px;
-  border: 2px solid black;
+  border-radius: 8px;
+  background: linear-gradient(#63595c, #646881);
   text-align: center;
 }
 
@@ -36,6 +38,7 @@ body {
 #numbers {
   width: 200px;
   height: 295px;
+  margin-left: 10px;
   display: flex;
   align-content: flex-start;
   flex-wrap: wrap-reverse;
@@ -49,13 +52,24 @@ body {
 
 button {
   background: none;
+  border: none;
+  outline: none;
   cursor: pointer;
 
   width: 60px;
   height: 70px;
   border-radius: 8px;
-  background-color: #585858;
+  background-color: #62bec1;
   font-size: 16px;
   font-weight: 600;
   margin: 2px;
+  transition: 0.4s;
+}
+
+button:hover {
+  background-color: #5ad2f4;
+}
+
+button:active {
+  transform: scale(0.8);
 }
